# rule-lang

./: CMakeLists.txt  README.md
.cursor/rules/: bisonflexexpert.mdc  langdev.mdc  langgpt-helper.mdc
include/: ast.h  pool.h  utils.h
src/: ast.c  lexer.l  main.c  parser.y  pool.c
src/lexer/: lexer.l  parser.y
tests/: test_lexer.c
tests/rule/: test-calc.rule  test-case.rule  test-loops.rule  test-plus.rule  test.rule
